# MKBCV-Final

./: .gitignore  LICENSE.txt  README.md
cpp/: CMakeLists.txt  GridCutter.hpp  Makefile  MetaFile.cpp  features.hpp  imosaic.cpp  imosaic.hpp  metafile.cpp  metafile.hpp  mosaic.hpp  mosaicbuilder.cpp  mosaicbuilder.hpp  mosaiccutter.hpp  mosaicfill.cpp  mosaicfill.hpp  mosaicsplitter.cpp  mosaicsplitter.hpp  mosaictiler.cpp  mosaictiler.hpp  procon.cpp  procon.hpp  queror.cpp  queror.hpp  trackbar.cpp  util.cpp  util.hpp
cpp/common/: util.cpp  util.hpp
cpp/preprocessor/: preprocessor.cpp
cpp/test/: metafiletest.cpp  querortest.cpp
metrics/: Makefile
post/: dummy.txt
src/: Makefile  imosaic.py  imutil.py  preproc.py  preproc.sh
